src/objects/SPE2Survey__c.object
<CustomObject>
    <fields>
        <fullName>Additional_Days__c</fullName>
        <label>Additional Days</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Additional_Days_for_week__c</fullName>
        <label>Additional Days for week</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BusinessLine__c</fullName>
        <label>Business Line</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BusinessUnit__c</fullName>
        <label>Business Unit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CategoryArea__c</fullName>
        <label>Category Area</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CategoryGroup__c</fullName>
        <label>Category Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Day_name_of_upload_week__c</fullName>
        <label>Day name of upload week</label>
        <picklist>
            <picklistValues>
                <fullName>Sunday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tuesday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wednesday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thursday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Friday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Saturday</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EndDate__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FrequencyInMonths__c</fullName>
        <inlineHelpText>Survey frequency as in “once every xx months</inlineHelpText>
        <label>Frequency</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Is_One_Time_Survey__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is One Time Survey</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MarketUnit__c</fullName>
        <label>Market Unit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <label>Market</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Month_Upload_Day__c</fullName>
        <label>Month Upload Day</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Month_Value__c</fullName>
        <label>Month Value</label>
        <picklist>
            <picklistValues>
                <fullName>January</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>February</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>March</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>April</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>May</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>June</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>July</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>August</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>September</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>October</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>November</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>December</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recurrence_Pattern__c</fullName>
        <label>Recurrence Pattern</label>
        <picklist>
            <picklistValues>
                <fullName>DayPerMonth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WeekPerMonth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DayPerYear</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WeekPerYear</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Recurrence_frequency_type__c</fullName>
        <label>Recurrence frequency type</label>
        <picklist>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yearly</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Respondent_Count__c</fullName>
        <label>Respondent Count</label>
        <summaryForeignKey>SPE2_Survey_Respondents__c.Survey__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <picklist>
            <picklistValues>
                <fullName>Draft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Published</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Obsolete</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <inlineHelpText>Desired launch date of the survey from calendar.  Default is tomorrow’s date.  If today’s date or earlier is selected, then the survey launches on Publish.</inlineHelpText>
        <label>Survey Launch Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Supplier_Count__c</fullName>
        <label>Supplier Count</label>
        <summaryForeignKey>SPE2_SurveySupplierMap__c.SPE2_Survey__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SurveyExecutionBeforeIndays__c</fullName>
        <label>Survey Due Date (In Days)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SurveyReminderBeforeExecutionDate__c</fullName>
        <inlineHelpText>Survey Closing Reminder xx  Days Before Survey Closing Date</inlineHelpText>
        <label>Survey Closing Reminder</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Survey_Code__c</fullName>
        <displayFormat>Survey-{0000}</displayFormat>
        <label>Survey Code</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Survey_Purpose__c</fullName>
        <label>Survey Purpose</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Survey_Sequential_Id__c</fullName>
        <formula>HYPERLINK(&quot;/&quot;&amp;Id,Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Survey Sequential Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Survey_Shut_Down__c</fullName>
        <inlineHelpText>Survey Close in xx  Days after Launch</inlineHelpText>
        <label>Survey Shut Down</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Survey_Title__c</fullName>
        <inlineHelpText>This title text will appear as main header in the respondent’s view during the survey input.  Please limit to less than 125 characters.</inlineHelpText>
        <label>Survey Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Upload_Day__c</fullName>
        <label>Upload Day</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Week_Count__c</fullName>
        <label>Week Count</label>
        <picklist>
            <picklistValues>
                <fullName>First</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Second</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Third</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fourth</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Yearly_Day_Name_of_Upload_Week__c</fullName>
        <label>Yearly Day Name of Upload Week</label>
        <picklist>
            <picklistValues>
                <fullName>Sunday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tuesday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wednesday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thursday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Friday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Saturday</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Yearly_Week_Count__c</fullName>
        <label>Yearly Week Count</label>
        <picklist>
            <picklistValues>
                <fullName>First</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Second</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Third</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fourth</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Survey</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Stage__c</columns>
        <columns>StartDate__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>Survey-{0000}</displayFormat>
        <label>Survey Sequential Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Standalone Surveys</pluralLabel>
    <recordTypes>
        <fullName>Obsolete_Survey_RecordType</fullName>
        <active>false</active>
        <label>Obsolete Survey RecordType</label>
    </recordTypes>
    <recordTypes>
        <fullName>Survey_RecordType</fullName>
        <active>true</active>
        <label>Survey RecordType</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Survey_Launch_Date</fullName>
        <active>true</active>
        <errorConditionFormula>StartDate__c  +   Survey_Shut_Down__c   &gt;  EndDate__c</errorConditionFormula>
        <errorMessage>Survey Shut down days added with Launch date should not exceed the Survey End Date</errorMessage>
    </validationRules>
</CustomObject>